fix: Rajout des features explicatives

--- a/satellites_starting_kit.ipynb
+++ b/satellites_starting_kit.ipynb
@@ -15,15 +15,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction  \n",
+    "\n",
+    "### The disintegration of orbiting satellites  \n",
+    "\n",
+    "Artificial satellites placed in orbit around the Earth do not remain operational indefinitely. Over time, Earth's gravitational pull, atmospheric drag, and other factors influence their trajectory, eventually leading to their disintegration (or decay). Accurately predicting the decay date of satellites is a crucial challenge for managing space traffic and ensuring the safety of orbital infrastructures.  \n",
+    "\n",
+    "### Database and source of information  \n",
+    "\n",
+    "The data used for this challenge comes from the <a href=\"https://www.space-track.org/#ssr\">**Space-Track** platform</a>, which centralizes information on orbiting objects, including active satellites, space debris, and decommissioned spacecraft. These data are collected by the **United States Space Surveillance Network (SSN)** and made available for analysis and orbital forecasting.  "
+   ]
   }
  ],
  "metadata": {
