feature : problem.py defini

--- a/satellites_starting_kit.ipynb
+++ b/satellites_starting_kit.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +94,306 @@
     "Additional Tracking Data\n",
     "<ul> <li> <code><b><span style=\"color:red\">FILE</span></b></code>: Internal file reference ID. <li> <code><b><span style=\"color:red\">GP_ID</span></b></code>: General Perturbation ID. <li> <code><b><span style=\"color:lightblue\">TLE_LINE0</span></b></code>: First line of the Two-Line Element Set (TLE) for tracking. <li> <code><b><span style=\"color:lightblue\">TLE_LINE1</span></b></code>: Second line of the TLE containing orbital elements. <li> <code><b><span style=\"color:lightblue\">TLE_LINE2</span></b></code>: Third line of the TLE containing additional tracking data. </ul>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CCSDS_OMM_VERS</th>\n",
+       "      <th>COMMENT</th>\n",
+       "      <th>CREATION_DATE</th>\n",
+       "      <th>ORIGINATOR</th>\n",
+       "      <th>CENTER_NAME</th>\n",
+       "      <th>REF_FRAME</th>\n",
+       "      <th>TIME_SYSTEM</th>\n",
+       "      <th>MEAN_ELEMENT_THEORY</th>\n",
+       "      <th>EPOCH</th>\n",
+       "      <th>MEAN_MOTION</th>\n",
+       "      <th>ECCENTRICITY</th>\n",
+       "      <th>INCLINATION</th>\n",
+       "      <th>RA_OF_ASC_NODE</th>\n",
+       "      <th>ARG_OF_PERICENTER</th>\n",
+       "      <th>MEAN_ANOMALY</th>\n",
+       "      <th>EPHEMERIS_TYPE</th>\n",
+       "      <th>CLASSIFICATION_TYPE</th>\n",
+       "      <th>ELEMENT_SET_NO</th>\n",
+       "      <th>REV_AT_EPOCH</th>\n",
+       "      <th>BSTAR</th>\n",
+       "      <th>MEAN_MOTION_DOT</th>\n",
+       "      <th>MEAN_MOTION_DDOT</th>\n",
+       "      <th>SEMIMAJOR_AXIS</th>\n",
+       "      <th>PERIOD</th>\n",
+       "      <th>APOAPSIS</th>\n",
+       "      <th>PERIAPSIS</th>\n",
+       "      <th>OBJECT_TYPE</th>\n",
+       "      <th>RCS_SIZE</th>\n",
+       "      <th>COUNTRY_CODE</th>\n",
+       "      <th>SITE</th>\n",
+       "      <th>FILE</th>\n",
+       "      <th>GP_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GENERATED VIA SPACE-TRACK.ORG API</td>\n",
+       "      <td>2023-10-07T17:28:49</td>\n",
+       "      <td>18 SPCS</td>\n",
+       "      <td>EARTH</td>\n",
+       "      <td>TEME</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>SGP4</td>\n",
+       "      <td>2023-10-07T02:47:45.242304</td>\n",
+       "      <td>16.479814</td>\n",
+       "      <td>0.001069</td>\n",
+       "      <td>97.1006</td>\n",
+       "      <td>355.5139</td>\n",
+       "      <td>266.1137</td>\n",
+       "      <td>93.8945</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>999</td>\n",
+       "      <td>16421</td>\n",
+       "      <td>0.000215</td>\n",
+       "      <td>0.140084</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6522.793</td>\n",
+       "      <td>87.380</td>\n",
+       "      <td>151.633</td>\n",
+       "      <td>137.684</td>\n",
+       "      <td>PAYLOAD</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>ARGN</td>\n",
+       "      <td>TSC</td>\n",
+       "      <td>4027321</td>\n",
+       "      <td>238643749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GENERATED VIA SPACE-TRACK.ORG API</td>\n",
+       "      <td>2023-05-24T06:26:12</td>\n",
+       "      <td>18 SPCS</td>\n",
+       "      <td>EARTH</td>\n",
+       "      <td>TEME</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>SGP4</td>\n",
+       "      <td>2023-05-23T18:33:11.428416</td>\n",
+       "      <td>15.790044</td>\n",
+       "      <td>0.002217</td>\n",
+       "      <td>98.7839</td>\n",
+       "      <td>86.7317</td>\n",
+       "      <td>160.2595</td>\n",
+       "      <td>199.9530</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>999</td>\n",
+       "      <td>23674</td>\n",
+       "      <td>0.012126</td>\n",
+       "      <td>0.025150</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6711.397</td>\n",
+       "      <td>91.197</td>\n",
+       "      <td>348.143</td>\n",
+       "      <td>318.382</td>\n",
+       "      <td>DEBRIS</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>US</td>\n",
+       "      <td>AFWTR</td>\n",
+       "      <td>3915786</td>\n",
+       "      <td>232409087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GENERATED VIA SPACE-TRACK.ORG API</td>\n",
+       "      <td>2024-10-02T19:24:27</td>\n",
+       "      <td>18 SPCS</td>\n",
+       "      <td>EARTH</td>\n",
+       "      <td>TEME</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>SGP4</td>\n",
+       "      <td>2024-10-01T06:19:57.433152</td>\n",
+       "      <td>16.514244</td>\n",
+       "      <td>0.000937</td>\n",
+       "      <td>97.0439</td>\n",
+       "      <td>293.7887</td>\n",
+       "      <td>285.9496</td>\n",
+       "      <td>74.0778</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>999</td>\n",
+       "      <td>31867</td>\n",
+       "      <td>0.000148</td>\n",
+       "      <td>0.161708</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6513.724</td>\n",
+       "      <td>87.197</td>\n",
+       "      <td>141.690</td>\n",
+       "      <td>129.489</td>\n",
+       "      <td>PAYLOAD</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>KSCUT</td>\n",
+       "      <td>4512136</td>\n",
+       "      <td>269511738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GENERATED VIA SPACE-TRACK.ORG API</td>\n",
+       "      <td>2025-02-15T07:46:15</td>\n",
+       "      <td>18 SPCS</td>\n",
+       "      <td>EARTH</td>\n",
+       "      <td>TEME</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>SGP4</td>\n",
+       "      <td>2025-02-15T05:56:26.077920</td>\n",
+       "      <td>16.438352</td>\n",
+       "      <td>0.000548</td>\n",
+       "      <td>53.0195</td>\n",
+       "      <td>299.3636</td>\n",
+       "      <td>224.8203</td>\n",
+       "      <td>229.5282</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>999</td>\n",
+       "      <td>22329</td>\n",
+       "      <td>0.000518</td>\n",
+       "      <td>0.136493</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>6533.757</td>\n",
+       "      <td>87.600</td>\n",
+       "      <td>159.205</td>\n",
+       "      <td>152.040</td>\n",
+       "      <td>PAYLOAD</td>\n",
+       "      <td>LARGE</td>\n",
+       "      <td>US</td>\n",
+       "      <td>AFETR</td>\n",
+       "      <td>4641356</td>\n",
+       "      <td>280776657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>GENERATED VIA SPACE-TRACK.ORG API</td>\n",
+       "      <td>2008-07-23T23:55:14</td>\n",
+       "      <td>18 SPCS</td>\n",
+       "      <td>EARTH</td>\n",
+       "      <td>TEME</td>\n",
+       "      <td>UTC</td>\n",
+       "      <td>SGP4</td>\n",
+       "      <td>2008-07-23T23:02:09.292992</td>\n",
+       "      <td>16.247275</td>\n",
+       "      <td>0.001399</td>\n",
+       "      <td>98.6053</td>\n",
+       "      <td>359.2413</td>\n",
+       "      <td>279.9671</td>\n",
+       "      <td>90.7511</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>999</td>\n",
+       "      <td>45954</td>\n",
+       "      <td>0.001344</td>\n",
+       "      <td>0.037679</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>6584.888</td>\n",
+       "      <td>88.630</td>\n",
+       "      <td>215.967</td>\n",
+       "      <td>197.539</td>\n",
+       "      <td>DEBRIS</td>\n",
+       "      <td>SMALL</td>\n",
+       "      <td>PRC</td>\n",
+       "      <td>TSC</td>\n",
+       "      <td>583048</td>\n",
+       "      <td>67229755</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CCSDS_OMM_VERS                            COMMENT        CREATION_DATE  \\\n",
+       "1             3.0  GENERATED VIA SPACE-TRACK.ORG API  2023-10-07T17:28:49   \n",
+       "2             3.0  GENERATED VIA SPACE-TRACK.ORG API  2023-05-24T06:26:12   \n",
+       "3             3.0  GENERATED VIA SPACE-TRACK.ORG API  2024-10-02T19:24:27   \n",
+       "4             3.0  GENERATED VIA SPACE-TRACK.ORG API  2025-02-15T07:46:15   \n",
+       "5             3.0  GENERATED VIA SPACE-TRACK.ORG API  2008-07-23T23:55:14   \n",
+       "\n",
+       "  ORIGINATOR CENTER_NAME REF_FRAME TIME_SYSTEM MEAN_ELEMENT_THEORY  \\\n",
+       "1    18 SPCS       EARTH      TEME         UTC                SGP4   \n",
+       "2    18 SPCS       EARTH      TEME         UTC                SGP4   \n",
+       "3    18 SPCS       EARTH      TEME         UTC                SGP4   \n",
+       "4    18 SPCS       EARTH      TEME         UTC                SGP4   \n",
+       "5    18 SPCS       EARTH      TEME         UTC                SGP4   \n",
+       "\n",
+       "                        EPOCH  MEAN_MOTION  ECCENTRICITY  INCLINATION  \\\n",
+       "1  2023-10-07T02:47:45.242304    16.479814      0.001069      97.1006   \n",
+       "2  2023-05-23T18:33:11.428416    15.790044      0.002217      98.7839   \n",
+       "3  2024-10-01T06:19:57.433152    16.514244      0.000937      97.0439   \n",
+       "4  2025-02-15T05:56:26.077920    16.438352      0.000548      53.0195   \n",
+       "5  2008-07-23T23:02:09.292992    16.247275      0.001399      98.6053   \n",
+       "\n",
+       "   RA_OF_ASC_NODE  ARG_OF_PERICENTER  MEAN_ANOMALY  EPHEMERIS_TYPE  \\\n",
+       "1        355.5139           266.1137       93.8945               0   \n",
+       "2         86.7317           160.2595      199.9530               0   \n",
+       "3        293.7887           285.9496       74.0778               0   \n",
+       "4        299.3636           224.8203      229.5282               0   \n",
+       "5        359.2413           279.9671       90.7511               0   \n",
+       "\n",
+       "  CLASSIFICATION_TYPE  ELEMENT_SET_NO  REV_AT_EPOCH     BSTAR  \\\n",
+       "1                   U             999         16421  0.000215   \n",
+       "2                   U             999         23674  0.012126   \n",
+       "3                   U             999         31867  0.000148   \n",
+       "4                   U             999         22329  0.000518   \n",
+       "5                   U             999         45954  0.001344   \n",
+       "\n",
+       "   MEAN_MOTION_DOT  MEAN_MOTION_DDOT  SEMIMAJOR_AXIS  PERIOD  APOAPSIS  \\\n",
+       "1         0.140084          0.000002        6522.793  87.380   151.633   \n",
+       "2         0.025150          0.000000        6711.397  91.197   348.143   \n",
+       "3         0.161708          0.000002        6513.724  87.197   141.690   \n",
+       "4         0.136493          0.000012        6533.757  87.600   159.205   \n",
+       "5         0.037679          0.000003        6584.888  88.630   215.967   \n",
+       "\n",
+       "   PERIAPSIS OBJECT_TYPE RCS_SIZE COUNTRY_CODE   SITE     FILE      GP_ID  \n",
+       "1    137.684     PAYLOAD   MEDIUM         ARGN    TSC  4027321  238643749  \n",
+       "2    318.382      DEBRIS   MEDIUM           US  AFWTR  3915786  232409087  \n",
+       "3    129.489     PAYLOAD   MEDIUM          JPN  KSCUT  4512136  269511738  \n",
+       "4    152.040     PAYLOAD    LARGE           US  AFETR  4641356  280776657  \n",
+       "5    197.539      DEBRIS    SMALL          PRC    TSC   583048   67229755  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_df.head()"
+   ]
   }
  ],
  "metadata": {
@@ -103,7 +403,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
