--- a/satellites_starting_kit.ipynb
+++ b/satellites_starting_kit.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 16886 entries, 1 to 25009\n",
+      "Data columns (total 32 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   CCSDS_OMM_VERS       16886 non-null  float64\n",
+      " 1   COMMENT              16886 non-null  object \n",
+      " 2   CREATION_DATE        16886 non-null  object \n",
+      " 3   ORIGINATOR           16886 non-null  object \n",
+      " 4   CENTER_NAME          16886 non-null  object \n",
+      " 5   REF_FRAME            16886 non-null  object \n",
+      " 6   TIME_SYSTEM          16886 non-null  object \n",
+      " 7   MEAN_ELEMENT_THEORY  16886 non-null  object \n",
+      " 8   EPOCH                16886 non-null  object \n",
+      " 9   MEAN_MOTION          16886 non-null  float64\n",
+      " 10  ECCENTRICITY         16886 non-null  float64\n",
+      " 11  INCLINATION          16886 non-null  float64\n",
+      " 12  RA_OF_ASC_NODE       16886 non-null  float64\n",
+      " 13  ARG_OF_PERICENTER    16886 non-null  float64\n",
+      " 14  MEAN_ANOMALY         16886 non-null  float64\n",
+      " 15  EPHEMERIS_TYPE       16886 non-null  int64  \n",
+      " 16  CLASSIFICATION_TYPE  16886 non-null  object \n",
+      " 17  ELEMENT_SET_NO       16886 non-null  int64  \n",
+      " 18  REV_AT_EPOCH         16886 non-null  int64  \n",
+      " 19  BSTAR                16886 non-null  float64\n",
+      " 20  MEAN_MOTION_DOT      16886 non-null  float64\n",
+      " 21  MEAN_MOTION_DDOT     16886 non-null  float64\n",
+      " 22  SEMIMAJOR_AXIS       16886 non-null  float64\n",
+      " 23  PERIOD               16886 non-null  float64\n",
+      " 24  APOAPSIS             16886 non-null  float64\n",
+      " 25  PERIAPSIS            16886 non-null  float64\n",
+      " 26  OBJECT_TYPE          16886 non-null  object \n",
+      " 27  RCS_SIZE             16185 non-null  object \n",
+      " 28  COUNTRY_CODE         16886 non-null  object \n",
+      " 29  SITE                 16760 non-null  object \n",
+      " 30  FILE                 16886 non-null  int64  \n",
+      " 31  GP_ID                16886 non-null  int64  \n",
+      "dtypes: float64(14), int64(5), object(13)\n",
+      "memory usage: 4.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "import problem\n",
     "\n",
-    "X_df, y = problem.get_train_data()"
+    "X_df, y = problem.get_train_data()\n",
+    "X_df.info()"
    ]
   },
   {
@@ -97,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +433,7 @@
        "5    197.539      DEBRIS    SMALL          PRC    TSC   583048   67229755  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.11.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +459,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3c06e3e46abf38078fe4dac36a0085ec2b134ebbd73dd076183d243eeca6918f"
+   }
   }
  },
  "nbformat": 4,
